sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

	for(i<- 1 to getNombreValeurs()-1) 
	{
		val valeur = getValeur(i);
		var j=i-1;
		while((j>0) && (getValeur(j)>valeur)
		{	
			echange(j,j+1);
			j-=1
		}
	setValeur(j+1,valeur);
	}	
}
